--- a/ios/Resources/CoinsDetail.xib
+++ b/ios/Resources/CoinsDetail.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -35,12 +36,12 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="vc2-GA-rdq">
+        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" id="vc2-GA-rdq">
             <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3WW-S2-Z6u" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="900"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="950"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nnX-OG-QpY" userLabel="QR">
                             <rect key="frame" x="0.0" y="8" width="375" height="149"/>
@@ -254,7 +255,7 @@
                         <constraint firstItem="1Pt-AW-hwQ" firstAttribute="centerX" secondItem="uBv-fh-gAf" secondAttribute="centerX" id="mdO-x3-70c"/>
                         <constraint firstItem="csh-vh-Lpe" firstAttribute="trailing" secondItem="n8G-wW-6W5" secondAttribute="trailing" id="mg8-xX-Rbl"/>
                         <constraint firstItem="qgC-Oh-6iZ" firstAttribute="top" secondItem="Fm4-kj-15W" secondAttribute="bottom" constant="24" id="n8y-ff-Gno"/>
-                        <constraint firstAttribute="height" constant="900" id="ohW-6L-5tW"/>
+                        <constraint firstAttribute="height" constant="950" id="ohW-6L-5tW"/>
                         <constraint firstItem="n8G-wW-6W5" firstAttribute="centerY" secondItem="uBv-fh-gAf" secondAttribute="centerY" id="pfK-nG-Nr3"/>
                         <constraint firstItem="uBv-fh-gAf" firstAttribute="width" secondItem="OiE-nR-XN3" secondAttribute="width" id="tFY-ZC-1rf"/>
                         <constraint firstItem="csh-vh-Lpe" firstAttribute="top" secondItem="R8A-SG-RzJ" secondAttribute="bottom" constant="20" id="uyr-wc-BvA"/>
@@ -269,14 +270,15 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="3WW-S2-Z6u" secondAttribute="trailing" id="2ge-6a-ydM"/>
+                <constraint firstItem="cis-z9-nUN" firstAttribute="trailing" secondItem="3WW-S2-Z6u" secondAttribute="trailing" id="2ge-6a-ydM"/>
                 <constraint firstItem="3WW-S2-Z6u" firstAttribute="top" secondItem="vc2-GA-rdq" secondAttribute="top" id="aMy-fu-5s2"/>
                 <constraint firstItem="3WW-S2-Z6u" firstAttribute="centerX" secondItem="vc2-GA-rdq" secondAttribute="centerX" id="dbc-kd-m1q"/>
                 <constraint firstAttribute="bottom" secondItem="3WW-S2-Z6u" secondAttribute="bottom" id="lWX-Et-q4W"/>
-                <constraint firstItem="3WW-S2-Z6u" firstAttribute="leading" secondItem="vc2-GA-rdq" secondAttribute="leading" id="rnK-cz-d7m"/>
+                <constraint firstItem="3WW-S2-Z6u" firstAttribute="leading" secondItem="cis-z9-nUN" secondAttribute="leading" id="rnK-cz-d7m"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+            <viewLayoutGuide key="safeArea" id="cis-z9-nUN"/>
             <point key="canvasLocation" x="220.5" y="108.5"/>
         </scrollView>
         <tapGestureRecognizer id="Iwi-fW-ZK0" userLabel="Address Tap Gesture Recognizer">
