--- a/ios/Resources/PrivateKeyDialog.xib
+++ b/ios/Resources/PrivateKeyDialog.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -29,12 +30,12 @@
                 <outlet property="view" destination="0gb-DM-Qsx" id="X9l-SW-qBD"/>
             </connections>
         </placeholder>
-        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="0gb-DM-Qsx">
+        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" id="0gb-DM-Qsx">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="700"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJe-g7-usJ">
                             <rect key="frame" x="15" y="32" width="82" height="18"/>
@@ -225,7 +226,7 @@
                         <constraint firstItem="mH0-Ne-KUL" firstAttribute="width" secondItem="vJe-g7-usJ" secondAttribute="width" id="f7d-8y-cBu"/>
                         <constraint firstItem="UNf-TC-twh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="fH6-8f-pBi"/>
                         <constraint firstItem="o4I-xx-lCw" firstAttribute="leading" secondItem="tGJ-hu-LEq" secondAttribute="leading" id="mdO-9r-0nS"/>
-                        <constraint firstAttribute="height" constant="700" id="mfT-ak-YtI"/>
+                        <constraint firstAttribute="height" constant="500" id="mfT-ak-YtI"/>
                         <constraint firstItem="mH0-Ne-KUL" firstAttribute="leading" secondItem="vJe-g7-usJ" secondAttribute="leading" id="pQX-6O-U6x"/>
                         <constraint firstItem="o4I-xx-lCw" firstAttribute="top" secondItem="njG-aN-70f" secondAttribute="bottom" constant="8" id="pfr-RN-TrR"/>
                         <constraint firstItem="ydH-6y-bp2" firstAttribute="centerX" secondItem="o4I-xx-lCw" secondAttribute="centerX" id="tF7-dV-TOf"/>
@@ -236,12 +237,13 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="H0R-8E-gDp"/>
-                <constraint firstItem="iN0-l3-epB" firstAttribute="leading" secondItem="0gb-DM-Qsx" secondAttribute="leading" id="I8p-A5-WCv"/>
+                <constraint firstItem="DIp-op-7kT" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="H0R-8E-gDp"/>
+                <constraint firstItem="iN0-l3-epB" firstAttribute="leading" secondItem="DIp-op-7kT" secondAttribute="leading" id="I8p-A5-WCv"/>
                 <constraint firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="bLE-3Z-ptq"/>
                 <constraint firstItem="iN0-l3-epB" firstAttribute="centerX" secondItem="0gb-DM-Qsx" secondAttribute="centerX" id="haZ-1i-Yve"/>
                 <constraint firstItem="iN0-l3-epB" firstAttribute="top" secondItem="0gb-DM-Qsx" secondAttribute="top" id="uM5-P0-5Wn"/>
             </constraints>
+            <viewLayoutGuide key="safeArea" id="DIp-op-7kT"/>
             <point key="canvasLocation" x="34.5" y="54.5"/>
         </scrollView>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
