--- a/ios/Resources/Receive.xib
+++ b/ios/Resources/Receive.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -36,7 +37,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Cfn-72-pmO">
             <rect key="frame" x="0.0" y="0.0" width="320" height="670"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J4F-QD-1fP">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="670"/>
@@ -379,17 +380,18 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="J4F-QD-1fP" firstAttribute="top" secondItem="Cfn-72-pmO" secondAttribute="top" id="4ZR-O5-rKy"/>
-                <constraint firstAttribute="bottom" secondItem="J4F-QD-1fP" secondAttribute="bottom" id="5QM-oa-bII"/>
-                <constraint firstAttribute="bottom" secondItem="6y4-5U-Cnp" secondAttribute="bottom" id="DfK-vr-ZCw"/>
-                <constraint firstItem="6y4-5U-Cnp" firstAttribute="leading" secondItem="Cfn-72-pmO" secondAttribute="leading" id="JfT-fn-IZl"/>
-                <constraint firstAttribute="trailing" secondItem="J4F-QD-1fP" secondAttribute="trailing" id="MZw-bN-6HW"/>
-                <constraint firstItem="J4F-QD-1fP" firstAttribute="leading" secondItem="Cfn-72-pmO" secondAttribute="leading" id="ed8-In-0kS"/>
-                <constraint firstAttribute="trailing" secondItem="6y4-5U-Cnp" secondAttribute="trailing" id="gvc-fY-c7o"/>
+                <constraint firstItem="J4F-QD-1fP" firstAttribute="top" secondItem="AUd-Hp-5gQ" secondAttribute="top" id="4ZR-O5-rKy"/>
+                <constraint firstItem="AUd-Hp-5gQ" firstAttribute="bottom" secondItem="J4F-QD-1fP" secondAttribute="bottom" id="5QM-oa-bII"/>
+                <constraint firstItem="AUd-Hp-5gQ" firstAttribute="bottom" secondItem="6y4-5U-Cnp" secondAttribute="bottom" id="DfK-vr-ZCw"/>
+                <constraint firstItem="6y4-5U-Cnp" firstAttribute="leading" secondItem="AUd-Hp-5gQ" secondAttribute="leading" id="JfT-fn-IZl"/>
+                <constraint firstItem="AUd-Hp-5gQ" firstAttribute="trailing" secondItem="J4F-QD-1fP" secondAttribute="trailing" id="MZw-bN-6HW"/>
+                <constraint firstItem="J4F-QD-1fP" firstAttribute="leading" secondItem="AUd-Hp-5gQ" secondAttribute="leading" id="ed8-In-0kS"/>
+                <constraint firstItem="AUd-Hp-5gQ" firstAttribute="trailing" secondItem="6y4-5U-Cnp" secondAttribute="trailing" id="gvc-fY-c7o"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="AUd-Hp-5gQ"/>
             <point key="canvasLocation" x="-418" y="182"/>
         </view>
     </objects>
