--- a/ios/Resources/Send.xib
+++ b/ios/Resources/Send.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -57,7 +58,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" tag="54321" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iVp-ba-2LA">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <view tag="100" contentMode="TopLeft" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="b2F-qP-ezb" userLabel="Content View">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="900"/>
@@ -413,14 +414,15 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="iVp-ba-2LA" firstAttribute="top" secondItem="u9y-yM-DXQ" secondAttribute="top" id="8CD-UX-lcB"/>
-                <constraint firstItem="Hzv-qc-UeE" firstAttribute="leading" secondItem="u9y-yM-DXQ" secondAttribute="leading" id="8dc-O9-iKQ"/>
-                <constraint firstItem="iVp-ba-2LA" firstAttribute="leading" secondItem="u9y-yM-DXQ" secondAttribute="leading" id="AEC-5g-Awj"/>
-                <constraint firstAttribute="trailing" secondItem="Hzv-qc-UeE" secondAttribute="trailing" id="BDN-bB-qiY"/>
-                <constraint firstAttribute="bottom" secondItem="Hzv-qc-UeE" secondAttribute="bottom" id="CdT-lT-7Xg"/>
-                <constraint firstAttribute="bottom" secondItem="iVp-ba-2LA" secondAttribute="bottom" id="seh-DF-xa6"/>
-                <constraint firstAttribute="trailing" secondItem="iVp-ba-2LA" secondAttribute="trailing" id="uwc-zV-h1c"/>
+                <constraint firstItem="iVp-ba-2LA" firstAttribute="top" secondItem="LdS-G9-B1F" secondAttribute="top" id="8CD-UX-lcB"/>
+                <constraint firstItem="Hzv-qc-UeE" firstAttribute="leading" secondItem="LdS-G9-B1F" secondAttribute="leading" id="8dc-O9-iKQ"/>
+                <constraint firstItem="iVp-ba-2LA" firstAttribute="leading" secondItem="LdS-G9-B1F" secondAttribute="leading" id="AEC-5g-Awj"/>
+                <constraint firstItem="LdS-G9-B1F" firstAttribute="trailing" secondItem="Hzv-qc-UeE" secondAttribute="trailing" id="BDN-bB-qiY"/>
+                <constraint firstItem="LdS-G9-B1F" firstAttribute="bottom" secondItem="Hzv-qc-UeE" secondAttribute="bottom" id="CdT-lT-7Xg"/>
+                <constraint firstItem="LdS-G9-B1F" firstAttribute="bottom" secondItem="iVp-ba-2LA" secondAttribute="bottom" id="seh-DF-xa6"/>
+                <constraint firstItem="LdS-G9-B1F" firstAttribute="trailing" secondItem="iVp-ba-2LA" secondAttribute="trailing" id="uwc-zV-h1c"/>
             </constraints>
+            <viewLayoutGuide key="safeArea" id="LdS-G9-B1F"/>
             <point key="canvasLocation" x="-371.5" y="-1.5"/>
         </view>
         <customObject id="4ld-e6-zWu" customClass="ECTextViewDelegate">
