--- a/ios/Resources/Splash2.xib
+++ b/ios/Resources/Splash2.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,10 +17,6 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <viewController id="juL-81-bGt">
-            <layoutGuides>
-                <viewControllerLayoutGuide type="top" id="vhj-Tc-SO7"/>
-                <viewControllerLayoutGuide type="bottom" id="mec-7s-pMh"/>
-            </layoutGuides>
             <view key="view" contentMode="scaleToFill" id="Zx0-e1-7tr">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -55,13 +52,14 @@
                 </subviews>
                 <color key="backgroundColor" red="0.33333333329999998" green="0.5450980392" blue="1" alpha="1" colorSpace="deviceRGB"/>
                 <constraints>
-                    <constraint firstItem="dNk-Ct-yXb" firstAttribute="centerX" secondItem="Zx0-e1-7tr" secondAttribute="centerX" id="73m-xC-BbQ"/>
+                    <constraint firstItem="dNk-Ct-yXb" firstAttribute="centerX" secondItem="lHU-qS-a6s" secondAttribute="centerX" id="73m-xC-BbQ"/>
                     <constraint firstItem="Gfd-cp-cff" firstAttribute="centerY" secondItem="Zx0-e1-7tr" secondAttribute="centerY" constant="-30" id="Iyf-UB-8Hq"/>
-                    <constraint firstItem="2xI-m4-L5H" firstAttribute="centerX" secondItem="Zx0-e1-7tr" secondAttribute="centerX" id="J3v-5L-S8S"/>
-                    <constraint firstItem="Gfd-cp-cff" firstAttribute="centerX" secondItem="Zx0-e1-7tr" secondAttribute="centerX" constant="98" id="XRs-RM-oSh"/>
+                    <constraint firstItem="2xI-m4-L5H" firstAttribute="centerX" secondItem="lHU-qS-a6s" secondAttribute="centerX" id="J3v-5L-S8S"/>
+                    <constraint firstItem="Gfd-cp-cff" firstAttribute="centerX" secondItem="lHU-qS-a6s" secondAttribute="centerX" constant="98" id="XRs-RM-oSh"/>
                     <constraint firstItem="dNk-Ct-yXb" firstAttribute="centerY" secondItem="Zx0-e1-7tr" secondAttribute="centerY" id="ZfN-oe-9Iv"/>
                     <constraint firstItem="dNk-Ct-yXb" firstAttribute="centerY" secondItem="2xI-m4-L5H" secondAttribute="centerY" constant="19.5" id="hpn-tg-WMi"/>
                 </constraints>
+                <viewLayoutGuide key="safeArea" id="lHU-qS-a6s"/>
             </view>
         </viewController>
     </objects>
