--- a/ios/Resources/CoinsDetail.xib
+++ b/ios/Resources/CoinsDetail.xib
@@ -43,11 +43,15 @@
                 <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3WW-S2-Z6u" userLabel="Content View">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="950"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nnX-OG-QpY" userLabel="QR">
+                        <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nnX-OG-QpY" userLabel="QR">
                             <rect key="frame" x="0.0" y="8" width="375" height="149"/>
+                            <gestureRecognizers/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="149" id="ihf-tC-0aE"/>
                             </constraints>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="ZJJ-mp-yY9" appends="YES" id="gOB-7P-mWV"/>
+                            </connections>
                         </imageView>
                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="c06e92ae1158b49f6a75ac3d681a0361784d3140551f1d0eda2056185af7c5dd:0" textAlignment="natural" lineBreakMode="middleTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hU3-ix-UVn">
                             <rect key="frame" x="15" y="188" width="345" height="44"/>
@@ -303,6 +307,11 @@
                 <outlet property="tv" destination="tiG-l2-mAN" id="YUe-uR-bno"/>
             </connections>
         </customObject>
+        <tapGestureRecognizer id="ZJJ-mp-yY9" userLabel="QR Tap Gesture Recognizer">
+            <connections>
+                <action selector="onQRImgTap" destination="-1" id="092-Bt-jvg"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="Rect_For_Chk.png" width="24" height="24"/>
