--- a/ios/Resources/TxHistoryCell.xib
+++ b/ios/Resources/TxHistoryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -127,7 +127,7 @@
                     <constraint firstItem="F5k-7z-KJd" firstAttribute="top" secondItem="xYx-Vg-Aqb" secondAttribute="top" constant="17" id="9Iv-Uw-Y5L"/>
                     <constraint firstItem="x0o-IR-hMC" firstAttribute="centerY" secondItem="WB6-RX-el1" secondAttribute="centerY" id="ELz-AR-kvL"/>
                     <constraint firstItem="gAF-Dw-KNw" firstAttribute="leading" secondItem="WB6-RX-el1" secondAttribute="trailing" constant="10" id="Gww-vE-HLk"/>
-                    <constraint firstAttribute="trailing" secondItem="kKt-Cj-GZi" secondAttribute="trailing" constant="28" id="KuT-6R-POK"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="kKt-Cj-GZi" secondAttribute="trailing" constant="12" id="KuT-6R-POK"/>
                     <constraint firstItem="gJo-l5-g23" firstAttribute="leading" secondItem="dcD-y8-2Un" secondAttribute="trailing" constant="4" id="L8L-fQ-NlQ"/>
                     <constraint firstItem="kKt-Cj-GZi" firstAttribute="trailing" secondItem="ERw-lj-3Wx" secondAttribute="trailing" id="UBn-WN-Xyn"/>
                     <constraint firstItem="IHa-C9-Oqc" firstAttribute="top" secondItem="gAF-Dw-KNw" secondAttribute="bottom" constant="5" id="Xv1-Pj-Czw"/>
@@ -149,7 +149,7 @@
                     <constraint firstItem="gJo-l5-g23" firstAttribute="centerY" secondItem="0Nz-Sd-X0p" secondAttribute="centerY" id="wG3-pb-BiV"/>
                     <constraint firstItem="kKt-Cj-GZi" firstAttribute="leading" secondItem="F5k-7z-KJd" secondAttribute="trailing" constant="2" id="xHt-0G-y6Y"/>
                     <constraint firstItem="IHa-C9-Oqc" firstAttribute="trailing" secondItem="gAF-Dw-KNw" secondAttribute="trailing" id="xtk-sQ-v0S"/>
-                    <constraint firstItem="WB6-RX-el1" firstAttribute="leading" secondItem="xYx-Vg-Aqb" secondAttribute="leading" constant="15" id="xwE-4u-X3m"/>
+                    <constraint firstItem="WB6-RX-el1" firstAttribute="leading" secondItem="xYx-Vg-Aqb" secondAttribute="leadingMargin" constant="-1" id="xwE-4u-X3m"/>
                     <constraint firstItem="kKt-Cj-GZi" firstAttribute="top" secondItem="xYx-Vg-Aqb" secondAttribute="top" constant="18" id="zxd-7n-evB"/>
                 </constraints>
             </tableViewCellContentView>
